Tue Feb  1 22:42:26 CET 2000

	* app/regex.c
	* plug-ins/script-fu/regex.c: remove occurences of gettext, since 
	we don't translate error messages

	* app/[lotsa files]: only include libgimp/gimpintl.h if needed; but 
	if it gets included, include config.h too

	* po/POTFILES.in
	* po-plug-ins/POTFILES.in: only list files that mark strings for 
	translation

2000-02-01  Michael Natterer  <mitch@gimp.org>

	* app/menus.c
	* app/channels_dialog.[ch]
	* app/layers_dialog.[ch]
	* app/paths_dialog.[ch]: Added an "Edit xxx Attributes..." menu
	entry to the dialogs' popup menus.

2000-02-01  Michael Natterer  <mitch@gimp.org>

	* app/preferences_dialog.c: applied a (modified) patch from Daniel
	which removes the useles word "Settings" from the prefs. dialog.

2000-02-01  Michael Natterer  <mitch@gimp.org>

	* app/blend.c
	* app/brightness_contrast.c
	* app/color_balance.c
	* app/color_picker.c
	* app/crop.c
	* app/curves.c
	* app/flip_tool.c
	* app/histogram_tool.c
	* app/hue_saturation.c
	* app/levels.c
	* app/magnify.c
	* app/measure.c
	* app/move.c
	* app/path_tool.c
	* app/posterize.c
	* app/text_tool.c
	* app/threshold.c
	* app/tool_options.c
	* app/transform_tool.c: unify the usage of "Selection" and
	"<blah> Tool" and removed the word "Options" from all tool option
	title strings because the dialog title already says "Options".

Tue Feb  1 20:02:47 CET 2000  Sven Neumann <sven@gimp.org>

	* app/menus.c
	* app/tools.c: added submenus to the tools menu

2000-02-01  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpsizeentry.[ch]: attach labels and the unit_menu with
	GTK_SHRINK.

	* libgimp/gimpwidgets.[ch]: new convenience constructor
	gimp_coordinates_new() which creates a sizeentry with two fields,
	labels and a chainbutton.

	* plug-ins/common/gauss_iir.c
	* plug-ins/common/gauss_rle.c
	* plug-ins/common/spread.c: use the coordinate constructor.

	* plug-ins/common/mblur.c: put the settings into two separate
	frames instead of using two nested frames.
