@@ -316,7 +316,7 @@ HELP
 	       (proc->args[2].arg_type != PDB_STRING) ||
 	       (proc->values[0].arg_type != PDB_IMAGE)))
     {
-      g_message (_("load handler \"%s\" does not take the standard load handler args"),
+      g_message ("load handler \"%s\" does not take the standard load handler args",
 		 name);
       goto done;
     }
@@ -325,8 +325,8 @@ HELP
 
   if (!file_proc)
     {
-      g_message (_("attempt to register non-existant load handler \"%s\""),
-		 name);
+      g_message ("attempt to register non-existant load handler \"%s\""),
+		 name;
       goto done;
     }
 
@@ -386,7 +386,7 @@ HELP
 	       (proc->args[3].arg_type != PDB_STRING) ||
 	       (proc->args[4].arg_type != PDB_STRING)))
     {
-      g_message (_("save handler \"%s\" does not take the standard save handler args"),
+      g_message ("save handler \"%s\" does not take the standard save handler args",
 		 name);
       goto done;
     }
@@ -395,7 +395,7 @@ HELP
 
   if (!file_proc)
     {
-      g_message (_("attempt to register non-existant save handler \"%s\""),
+      g_message ("attempt to register non-existant save handler \"%s\"",
 		 name);
       goto done;
     }
@@ -410,8 +410,7 @@ CODE
     );
 }
 
-@headers = qw("fileops.h" "plug_in.h" "config.h" "libgimp/gimpintl.h"
-	      <unistd.h>);
+@headers = qw("fileops.h" "plug_in.h" "config.h" <unistd.h>);
 
 @procs = qw(file_load file_save file_load_thumbnail file_save_thumbnail
 	    temp_name register_magic_load_handler register_load_handler
